--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "db:migrate": "npx prisma migrate dev --name init --schema src/database/prisma/schema.prisma",
+    "db:push": "npx prisma db push --schema src/database/prisma/schema.prisma",
     "db:studio": "npx prisma studio --schema src/database/prisma/schema.prisma"
   },
   "dependencies": {
