--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.2.8",
     "@nestjs/swagger": "^7.1.13",
+    "@nestjs/websockets": "^10.2.8",
     "@prisma/client": "^5.4.2",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
